# drone_project

./: .gitignore  CMakeLists.txt  Kalman filtering ressources.doc  README.md  mainpage.dox  manifest.xml  package.xml  readme.html
Kalman/doc/: rostum instal.doc  run_tum.doc
arduino_code/: README
arduino_code/gps_fwd/: .gitignore  README
arduino_code/gps_fwd/src/: gps_srf_data.ino
computer_vision/: tag.xcf
computer_vision/HSV/: CvImageViewer.h  HSVWidget.cpp  HSVWidget.h  ImageAlgorithm.h  UserInterface.cpp  UserInterface.h  main.cpp  opencv  opencv.pro
computer_vision/camera/: main.c
computer_vision/first_test/: main.c
computer_vision/homemade/HSV/: Makefile  main.cpp
computer_vision/homemade/camera/: main.c
computer_vision/homemade/qt_display/: opencv  (+1 more)
computer_vision/keypoints/: Makefile  main.c  test
computer_vision/qt_display/: .CvVideoViewer.h.swp  CvVideoViewer.h  Makefile  main.cpp  moc_CvImageViewer.cpp  moc_CvVideoViewer.cpp
computer_vision/tag_detector/: mainpage.dox  manifest.xml
computer_vision/tag_recognition/: CvImageViewer.h  Makefile  UserInterface.cpp  UserInterface.h
datas/: .~lock.test mesure gps ven15nov13.ods#  test mesure gps ven15nov13.ods
helisimple2/etc/: Calib_Results.m
helisimple2/src/: Makefile  readme
help/: gps_use.html  gps_use.md  picocom_ardrone.html  picocom_ardrone.md  ros_easystart.html  ros_easystart.md
launch/: ekf_demo1.launch
launchers/: webcam.xml
src/: GpsConnection.cpp  GpsConnection.hpp  gps_conv.cpp  gps_conv.h  gps_remote_driver.cpp  gps_serial_driver.c  odom_to_path.cpp  test_gps_connection_lib.cpp
(+36 files in other folders)
